# snowflaked

./: .gitignore  Makefile.am  README.md  bootstrap.sh  configure.ac  homebrew_install_dependencies.sh
clients/php/: README.md  composer.json  config.m4  php_snowflake.c  php_snowflake.h
clients/php-extension/: php_snowflake.h
clients/php/example/: example.php
clients/php/src/: Client.php  ConnectionException.php  ErrorException.php
clients/php/tests/: basic.phpt
src/: Makefile.am  benchmark.c  client.c  commands.c  commands.h  snowflake.c  snowflake.h  snowflaked.c  snowflaked.h  stats.h
tests/: Makefile.am  check_snowflake.c
